tetris-interactor/src/snapshots/tetris_interactor__tests__tetromino_blocks_L_0.snap
---
source: src/main.rs
expression: board.to_string()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|#         |
|#         |
|##        |
____________
