tetris-interactor/src/snapshots/tetris_interactor__tests__tetromino_blocks_Z_0.snap
---
source: src/main.rs
expression: board.to_string()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|##        |
| ##       |
____________
